<resources>
    <string name="app_name">CamMaster</string>
    <!--    Added by Luv-->
    <string name="loading_dots">. . .</string>
    <string name="login_here">Login Here</string>
    <string name="register_here">Register Here</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="do_not_have_account">Do not have account?</string>
    <string name="already_have_account">Already have account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="otp_veri_text">We will send you reset password link on registered E-mail address </string>
    <string name="enter_otp_text">Enter one time password send on</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="get_otp">Submit</string>
    <string name="verify">Verify</string>
    <string name="_91">+91</string>
    <string name="xxx">xxxxxxx</string>
    <string name="selectM">Select Month</string>
    <string name="selectY">Select Year</string>
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="year">
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
    </string-array>
</resources>